manifests/applications/service-operations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-operations
  namespace: workshop-n-gine
  labels:
    app: service-operations
spec:
  selector:
    matchLabels:
      app: service-operations
  template:
    metadata:
      labels:
        app: service-operations
    spec:
        containers:
          - name: service-operations
            image: jhosepmyr/service-operations:1.1.0
            imagePullPolicy: Always
            resources:
                requests:
                  memory: "512Mi"
                  cpu: "250m"
                limits:
                  memory: "1Gi"
                  cpu: "500m"
            ports:
                - containerPort: 9200
---

apiVersion: v1
kind: Service
metadata:
  name: service-operations
  namespace: workshop-n-gine
  labels:
    app: service-operations
spec:
    selector:
        app: service-operations
    ports:
        - protocol: TCP
          port: 9200
          targetPort: 9200
