manifests/applications/staff-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-management
  namespace: workshop-n-gine
  labels:
      app: staff-management
spec:
  selector:
    matchLabels:
      app: staff-management
  template:
    metadata:
        labels:
            app: staff-management
    spec:
      containers:
        - name: staff-management
          image: jhosepmyr/staff-management:1.1.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 9400
---

apiVersion: v1
kind: Service
metadata:
  name: staff-management
  namespace: workshop-n-gine
  labels:
    app: staff-management
spec:
    selector:
        app: staff-management
    ports:
      - protocol: TCP
        port: 9400
        targetPort: 9400
