manifests/applications/workshop-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-management
  namespace: workshop-n-gine
  labels:
      app: workshop-management
spec:
  selector:
    matchLabels:
      app: workshop-management
  template:
    metadata:
      labels:
        app: workshop-management
    spec:
      containers:
      - name: workshop-management
        image: jhosepmyr/workshop-management:1.3.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "200m"
            memory: "1Gi"
        ports:
        - containerPort: 9000
---

apiVersion: v1
kind: Service
metadata:
  name: workshop-management
  namespace: workshop-n-gine
  labels:
    app: workshop-management
spec:
    ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
    selector:
        app: workshop-management
