manifests/applications/api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
      - name: http
        port: 80
        protocol: HTTP
        allowedRoutes:
            namespaces:
              from: All

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: workshop-n-gine-http-route
  namespace: workshop-n-gine
spec:
  parentRefs:
    - kind: Gateway
      name: nginx-gateway
      namespace: nginx-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /workshop-management
      backendRefs:
        - group: ""
          kind: Service
          name: workshop-management
          port: 9000
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
    - matches:
        - path:
            type: PathPrefix
            value: /staff-management
      backendRefs:
        - group: ""
          kind: Service
          name: staff-management
          port: 9400
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
